# claude-waypoint

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
claude_waypoint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: design.md
docs/superpowers/plans/: 2026-05-31-waypoint-cli-improvements.md  2026-06-01-waypoint-phase2-slice1-liveness-watch.md  2026-06-01-waypoint-phase2-slice2a-bootstrap-permissions.md  2026-06-01-waypoint-phase2-slice2b-i-worker-command.md  2026-06-01-waypoint-phase2-slice2b-ii-launcher.md  2026-06-01-waypoint-phase2-slice3-autonomous-guard.md  2026-06-01-waypoint-phase3-orchestration-skill.md
docs/superpowers/specs/: 2026-05-31-waypoint-cli-improvements-design.md  2026-06-01-waypoint-phase2-reconciler-design.md  2026-06-01-waypoint-phase3-orchestration-skill-design.md
hooks/: notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  pre_tool_use_guard.py  session_start.py  stop.py
scripts/: install-global.sh  install-project.sh  waypoint-cron.sh
skills/waypoint/: SKILL.md
tests/: test_cli.py  test_fingerprint.py  test_guard.py  test_hooks.py  test_launcher.py  test_model.py  test_monitor.py  test_progress.py  test_runtime.py  test_statusmd.py  test_store.py  test_worker.py
waypoint/: cli.py  fingerprint.py  guard.py  launcher.py  model.py  monitor.py  progress.py  runtime.py  statusmd.py  store.py  worker.py
