[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-waypoint"
version = "0.1.0"
description = "Forward-recovery checkpoint-restart for Claude Code: resume interrupted multi-step tasks."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
waypoint = "waypoint.cli:main"

[project.urls]
Homepage = "https://github.com/tonychen15/claude-waypoint"
Repository = "https://github.com/tonychen15/claude-waypoint"

[tool.setuptools]
packages = ["waypoint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Put the repo root on sys.path so `import waypoint` resolves without an
# install (replaces the previous empty conftest.py).
pythonpath = ["."]
